# Atlas

./: .gitattributes  .gitignore  CHANGELOG.md  CODEX_ATLAS_PLAN.md  Cargo.toml  README.md  TASKS.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
crates/atlas-core/: Cargo.toml
crates/atlas-core/migrations/: V0001__initial_schema.sql
crates/atlas-core/src/: error.rs  lib.rs  paths.rs  settings.rs
crates/atlas-core/src/diff/: mod.rs
crates/atlas-core/src/export/: mod.rs  render.rs  sidecar.rs  templates.rs
crates/atlas-core/src/search/: mod.rs
crates/atlas-core/src/storage/: ingest.rs  migrations.rs  mod.rs
crates/atlas-core/templates/: IDA-Mapping.txt.tera  Offsets.h.tera  Sigscan.txt.tera  Trainer.cs.tera
crates/atlas-core/tests/: export_render.rs  multi_parser.rs  real_fixture_ingest.rs
crates/atlas-parser-trait/: Cargo.toml
crates/atlas-parser-trait/src/: lib.rs  reporter.rs  types.rs
crates/atlas-parser-ue/: Cargo.toml
crates/atlas-parser-ue/src/: lexer.rs  lib.rs  parser.rs
crates/atlas-parser-ue/tests/: fixture_parsing.rs  real_fixture.rs
crates/atlas-parser-unity/: Cargo.toml
crates/atlas-parser-unity/src/: lib.rs
docs/: parser-format-notes.md
docs/adr/: 0001-record-architecture-decisions.md  0002-locked-stack.md  0003-per-dump-symbol-identity.md  0004-tauri-app-error-wraps-atlas-error.md
fixtures/synthetic/tiny-game-v1/: SDK.hpp  SDKInfo.json  TinyGame.hpp
fixtures/synthetic/tiny-game-v2/: SDK.hpp  SDKInfo.json  TinyGame.hpp
src/: App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  observability.rs  watcher.rs
src-tauri/src/commands/: diff.rs  dumps.rs  export.rs  mod.rs  ping.rs  search.rs  settings.rs
src/components/: watcher-toast.tsx
src/ipc/: client.ts  types.ts
src/routes/: browse.tsx  diff.tsx  export.tsx  settings.tsx
src/stores/: theme.ts
src/styles/: globals.css
