[package]
name = "codex-atlas"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Codex Atlas — Tauri 2 desktop shell."
default-run = "codex-atlas"

[lib]
name = "codex_atlas_lib"
crate-type = ["lib"]

[[bin]]
name = "codex-atlas"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
atlas-core = { workspace = true }
atlas-parser-trait = { workspace = true }
atlas-parser-ue = { workspace = true }
rusqlite = { workspace = true }
notify = { workspace = true }

tauri = { workspace = true, features = ["devtools"] }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-opener = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

[lints]
workspace = true
