[package]
name = "atlas-parser-trait"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types and SdkParser trait for game-SDK dump parsers."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
ts-rs = { workspace = true }

[lints]
workspace = true
